fix dropdown text overflow

--- a/src/Nowruz/modules/general/components/SearchDropdown/search-dropdown.module.scss
+++ b/src/Nowruz/modules/general/components/SearchDropdown/search-dropdown.module.scss
@@ -71,3 +71,10 @@
   display: flex;
   align-items: center;
 }
+
+.singleValueLable {
+  display: flex;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
